# todoapp

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_database_manager.py  test_generate_todo.py  todo_v1.py  todo_v2.py
scripts/: init.sql
