[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Work <workmoderately@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
